# fizban

./: README.md  pyproject.toml  run.sh
.github/workflows/: ci.yml
docs/: SETUP_GUIDE.md
fizban/: __init__.py  cli.py  config.py  db.py  embeddings.py  indexer.py  markdown_parser.py  mcp_server.py  repos.py  search.py
fizban/vector/: __init__.py  base.py  vec_backend.py  vss_backend.py
tests/: test_chunking.py  test_config.py  test_db.py  test_embeddings.py  test_indexer.py  test_markdown_parser.py  test_repos.py  test_search.py  test_vector.py
