[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fizban"
version = "0.1.0"
description = "Local documentation knowledge base with MCP server"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = [
    "click>=8.1",
    "sentence-transformers>=2.2",
    "mcp[cli]>=1.0",
    "numpy>=1.24",
]

[project.optional-dependencies]
vec = ["sqlite-vec>=0.1"]
vss = ["sqlite-vss>=0.1"]
dev = ["pytest>=7.0", "pytest-cov"]

[project.scripts]
fizban = "fizban.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["fizban*"]
